# rust_excel-splitter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  error.rs  main.rs  processor.rs  reader.rs  writer.rs  xml_style.rs
src/gui/: app.rs  mod.rs  task.rs
src/gui/panels/: input_panel.rs  log_panel.rs  mod.rs  output_panel.rs  sheet_panel.rs
