[package]
name = "excel-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.24", features = ["dates"] }
rust_xlsxwriter = "0.75"
quick-xml = { version = "0.36", features = ["serialize"] }
zip = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
indexmap = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"

eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
rfd = "0.15"
crossbeam-channel = "0.5"

clap = { version = "4", features = ["derive"], optional = true }

[features]
default = ["gui"]
gui = []
cli = ["clap"]

[profile.release]
opt-level = 3
lto = true
strip = true
